# niyam

./: .gitignore  03-niyam-security-access-governance.md  06-niyam-backward-compatibility-and-migration-plan.md  AGENTS.md  CLAUDE.md  ORCHESTRATION_REVIEW.md  README.md  RELEASE.md  REMEDIATION_PLAN.md  ROADMAP.md  SECURITY_REMEDIATION_STATUS.md  action.yml  build_binary.py  change-T3.txt  change-T5.txt  evidence.html  install.sh  niyam-capabilities.html  niyam-governance-testing.md  niyam-security-audit.md  niyam_help.txt  pyproject.toml  task-T1-prompt.md  task-T2-prompt.md  task-T3-prompt.md  task-T4-prompt.md  task-T5-prompt.md
.claude/: settings.json
.claude/commands/: sutra-ci-verify.md  sutra-compare.md  sutra-context-refresh.md  sutra-context-show.md  sutra-dashboard.md  sutra-doctor.md  sutra-guard-disable.md  sutra-memory-add.md  sutra-mission-active.md  sutra-mission-approve.md  sutra-mission-pause.md  sutra-mission-resume.md  sutra-mission-retry.md  sutra-mission-rollback.md  sutra-mission-skip.md  sutra-pack-add.md  sutra-pack-list.md  sutra-plan.md  sutra-review-pr.md  sutra-run.md  sutra-setup.md  sutra-sync.md
.claude/hooks/: pre_tool_guard.py
.github/workflows/: niyam-ci.yml  publish.yml  release.yml  scorecard.yml  sutra-ci.yml
.niyam/: mcp-registry.json  scan-baseline.json
.niyam/agents/: frontend-specialist.md
.niyam/commands/: niyam-compare.md  niyam-context-diff.md  niyam-context-refresh.md  niyam-dashboard.md  niyam-guard-careful.md  niyam-hello.md  niyam-init.md  niyam-memory-show.md  niyam-mission-active.md  niyam-mission-approve.md  niyam-mission-dashboard.md  niyam-mission-rollback.md  niyam-mission-skip.md  niyam-mission-start.md  niyam-mission-validate-plan.md  niyam-pack-add.md  niyam-pack-list.md  niyam-pack-sync.md  niyam-plan.md  niyam-policy-validate.md  niyam-report.md  niyam-review-pr.md  niyam-run.md  niyam-runtime-add.md  niyam-setup.md  niyam-sync.md  niyam-version.md  ship.md
.niyam/context/: architecture.md  validation.md
.niyam/policies/: approvals.yaml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.sutra/: project.yaml  runtimes.yaml  sutra.yaml
.sutra/commands/: context-refresh.md  implement.md  sutra-ci-verify.md  sutra-context-diff.md  sutra-context-show.md  sutra-doctor.md  sutra-guard-careful.md  sutra-guard-disable.md  sutra-guard-enable.md  sutra-guard-freeze.md  sutra-hello.md  sutra-init.md  sutra-memory-add.md  sutra-memory-clear.md  sutra-memory-show.md  sutra-mission-dashboard.md  sutra-mission-pause.md  sutra-mission-plan.md  sutra-mission-report.md  sutra-mission-resume.md  sutra-mission-retry.md  sutra-mission-show.md  sutra-mission-start.md  sutra-mission-status.md  sutra-mission-validate-plan.md  sutra-mission-verify-report.md  sutra-pack-remove.md  sutra-pack-sync.md  sutra-policy-validate.md  sutra-pr-create.md  sutra-report.md  sutra-runtime-add.md  sutra-version.md  sutra-watch.md
.sutra/context/: architecture.md  validation.md
.sutra/hook-cache/: guard-config.json
.sutra/policies/: security.yaml
.sutra/runs/: current
azure-devops/: vss-extension.json
azure-devops/NiyamVerify/: index.js  task.json
docs/: agentops-platform.md  browser-sandbox.md  cli-reference.md  control-room.md  cost.md  evidence-sample.md  evidence.md  governance.md  mcp-memory-server.md  mcp.md  memory-ledger.md  migration-from-sutra.md  observe-mode.md  progress.md  redaction.md  runtime-execution.md  scan.md  user-flows.html  user-guide.md
docs/ci/: azure-devops.md  github-actions.md  supply-chain-hardening.md
docs/codebase/: code-structure.md  feature-catalog.md
docs/compatibility/: backward-compatibility.md
docs/governance/: 01-niyam-governance-prd.md  02-niyam-technical-architecture.md  03-niyam-security-access-governance.md  04-niyam-cli-and-ci-spec.md  05-niyam-feature-ticket-list.md  06-niyam-backward-compatibility-and-migration-plan.md  07-niyam-swarm-mode-design.md  e2e-test-plan.md  harness-e2e-validation-tracker.md  production-readiness-standard.md
graphify-out/: GRAPH_TREE.html  README.md  graph.json  manifest.json  sutra-callflow.html
niyam/: __init__.py  __main__.py
requirements/: ADD_INFO_CMD.md
scratch/: hello-requirement.md  requirements-utils.md
scripts/: test-governance-e2e.sh
sutra/: __init__.py  __main__.py  cli.py
tests/: change-T2.txt  conftest.py  test_adaptive_orchestration.py  test_api.py  test_application_attribution.py  test_application_policy.py  test_applications.py  test_architecture.py  test_auto_heal.py  test_baseline.py  test_brainstorm.py  test_ci.py  test_ci_generators.py  test_cli.py  test_cli_refinement.py  test_compare.py  test_config_overrides.py  test_context.py  test_context_add.py  test_context_router.py  test_contract_enforcement.py  test_contract_schema.py  test_cost.py  test_dashboard.py  test_doctor.py  test_doctor_check.py  test_doctor_enhanced.py  test_dynamic_cost.py  test_enterprise_features.py  test_evidence_extended.py  test_executor_fallback.py  test_external_scanners.py  test_fleet.py  test_fleet_cli.py  test_fleet_dispatch.py  test_fleet_management.py  test_governance_integration.py  test_governance_polishing.py  test_governance_smoke.py  test_graph.py  (+62 more)
(+419 files in other folders)
