[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "niyam-dev"
version = "0.3.9"
description = "Governed autonomous development for AI coding agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Niyam Team" },
]
keywords = [
  "ai",
  "agents",
  "claude-code",
  "codex",
  "gemini",
  "developer-tools",
  "cli",
  "governance",
  "devops",
  "automation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer>=0.15.0,<1.0",
    "rich>=13.0.0,<14.0",
    "pydantic>=2.0.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "jinja2>=3.1.0,<4.0",
    "gitpython>=3.1.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-tmp-files>=0.0.2",
]

[project.scripts]
niyam = "niyam.cli:app"
sutra = "niyam.cli:deprecated_sutra"

[project.urls]
Homepage = "https://github.com/aincloudtools/niyam"
Repository = "https://github.com/aincloudtools/niyam"
Issues = "https://github.com/aincloudtools/niyam/issues"

[tool.hatch.build.targets.wheel]
packages = ["niyam"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
