[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "niyam"
version = "1.0.0-rc1"
description = "Governed autonomous development and production-readiness for AI coding agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Niyam Team", email = "oss@sairintechnology.com" },
]
keywords = [
  "ai",
  "agents",
  "claude-code",
  "codex",
  "gemini",
  "developer-tools",
  "cli",
  "governance",
  "devops",
  "automation",
  "security",
  "compliance",
  "production-readiness"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.15.0,<1.0",
    "rich>=13.0.0,<14.0",
    "questionary>=2.0.0,<3.0",
    "structlog>=24.0.0,<26.0",
    "pydantic>=2.0.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "jinja2>=3.1.0,<4.0",
    "gitpython>=3.1.0,<4.0",
    "fastapi>=0.110.0,<1.0",
    "uvicorn[standard]>=0.29.0,<1.0",
    "filelock>=3.12.0",
    "cryptography>=41.0.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-tmp-files>=0.0.2",
    "httpx>=0.27.0",
]
rag = [
    "chromadb>=0.5.0,<1.0",
]

[project.scripts]
niyam = "niyam.cli:app"
sutra = "niyam.cli:deprecated_sutra"

[project.urls]
Homepage = "https://github.com/sairintechnologycom/niyam"
Repository = "https://github.com/sairintechnologycom/niyam"
Issues = "https://github.com/sairintechnologycom/niyam/issues"

[tool.hatch.build.targets.wheel]
packages = ["niyam"]

[tool.hatch.build.targets.sdist]
include = [
    "/niyam",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
